# Operating_Systems_2025_Task2

./: CMakeLists.txt
include/: process_manager.h
src/: process_manager.cpp
tests/: main.cpp
